- The alignment fixed

--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -847,7 +847,7 @@ a:hover {
   flex-direction: column;
   background: $color_deepMeadow;
   max-width: 290px;
-  padding: 30px;
+  padding: 15px 30px;
 
   .icon {
     width: 40px;
